Refactored VCard classes in preparation for URF VCard processing.